--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ environment:
 
 dependencies:
   intl: ^0.16.1
+  firebase_auth: ^0.15.5+3
+  pin_code_fields: ^2.4.0
   flutter:
     sdk: flutter
 
