--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   pin_code_fields: ^2.4.0
   flutter:
     sdk: flutter
+  cloud_firestore: ^0.13.4+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
