--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  firebase_ml_vision:
+  image_picker: 0.6.4
 
 
 # For information on the generic Dart part of this file, see the
