--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter:
     sdk: flutter
   cloud_firestore: ^0.13.4+2
+  flutter_form_bloc: ^0.12.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -34,13 +35,11 @@ dev_dependencies:
   firebase_ml_vision:
   image_picker: 0.6.4
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -88,4 +87,4 @@ flutter:
         - asset: fonts/VarelaRound-Regular.ttf
     - family: Proxima Nova
       fonts:
-        - asset: fonts/proxima-nova.ttf  
+        - asset: fonts/proxima-nova.ttf
