--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
-    implementation 'com.android.support:multidex:1.0.3' // use latest version
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-messaging:20.1.5'	 // use latest version
 
 }
